// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/VehicleResults/LookupInfo NewViolationsSincePreviousLookup smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item no-padding">
              <div class="row">
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box keys lookup-info">
                    <div class="vehicle-info-group vehicle-identity">
                      <div>
                        Plate:
                      </div>
                      <div>
                        State:
                      </div>
                      <div>
                        Plate type:
                      </div>
                    </div>
                    <div class="vehicle-info-group vehicle-violations">
                      <div class="violation-count-types">
                        <div>
                          Violations:
                        </div>
                        <div class="violation-count-type">
                          Parking:
                        </div>
                      </div>
                    </div>
                    <div class="vehicle-info-group vehicle-lookups">
                      <div>
                        Lookups:
                      </div>
                      <div>
                        Previous:
                      </div>
                    </div>
                  </div>
                  <div class="summary-box values lookup-info">
                    <div class="vehicle-info-group vehicle-identity">
                      <div>
                        ABC1234
                      </div>
                      <div class="region">
                        <div class="region-abbreviation">
                          NY
                        </div>
                        <div class="region-full-name">
                          New York
                        </div>
                      </div>
                      <div>
                        All
                      </div>
                    </div>
                    <div class="vehicle-info-group vehicle-violations">
                      <div class="violation-counts">
                        <div class="violation-total">
                          (1 new) 3
                        </div>
                        <div class="violation-count">
                          3
                        </div>
                      </div>
                    </div>
                    <div class="vehicle-info-group vehicle-lookups">
                      <div>
                        2
                      </div>
                      <div>
                        07/12/2023
                      </div>
                    </div>
                  </div>
                </div>
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box keys">
                    <div>
                      Fined:
                    </div>
                    <div>
                      Reduced:
                    </div>
                    <div class="fines-reduced">
                      Paid:
                    </div>
                    <div>
                      Owed:
                    </div>
                  </div>
                  <div class="summary-box values fines"
                       role="math"
                       aria-label="$3,850.00 fined - $3,780.00 paid - $20.00 reduced = $50.00 outstanding"
                  >
                    <div class="math-symbols">
                      <div>
                        &nbsp;&nbsp;&nbsp;
                      </div>
                      <div>
                        &nbsp;&nbsp;&nbsp;
                      </div>
                      <div class="fines-reduced">
                        –&nbsp;
                      </div>
                      <div>
                        &nbsp;&nbsp;&nbsp;
                      </div>
                    </div>
                    <div class="amounts">
                      <div>
                        $3,850.00
                      </div>
                      <div>
                        $20.00
                      </div>
                      <div class="fines-reduced">
                        $3,780.00
                      </div>
                      <div>
                        $50.00
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/LookupInfo NoPreviousLookups smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item no-padding">
              <div class="row">
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box keys lookup-info">
                    <div class="vehicle-info-group vehicle-identity">
                      <div>
                        Plate:
                      </div>
                      <div>
                        State:
                      </div>
                      <div>
                        Plate type:
                      </div>
                    </div>
                    <div class="vehicle-info-group vehicle-violations">
                      <div class="violation-count-types">
                        <div>
                          Violations:
                        </div>
                        <div class="violation-count-type">
                          Parking:
                        </div>
                      </div>
                    </div>
                    <div class="vehicle-info-group vehicle-lookups">
                      <div>
                        Lookups:
                      </div>
                    </div>
                  </div>
                  <div class="summary-box values lookup-info">
                    <div class="vehicle-info-group vehicle-identity">
                      <div>
                        ABC1234
                      </div>
                      <div class="region">
                        <div class="region-abbreviation">
                          NY
                        </div>
                        <div class="region-full-name">
                          New York
                        </div>
                      </div>
                      <div>
                        All
                      </div>
                    </div>
                    <div class="vehicle-info-group vehicle-violations">
                      <div class="violation-counts">
                        <div class="violation-total">
                          3
                        </div>
                        <div class="violation-count">
                          3
                        </div>
                      </div>
                    </div>
                    <div class="vehicle-info-group vehicle-lookups">
                      <div>
                        2
                      </div>
                    </div>
                  </div>
                </div>
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box keys">
                    <div>
                      Fined:
                    </div>
                    <div>
                      Reduced:
                    </div>
                    <div class="fines-reduced">
                      Paid:
                    </div>
                    <div>
                      Owed:
                    </div>
                  </div>
                  <div class="summary-box values fines"
                       role="math"
                       aria-label="$3,850.00 fined - $3,780.00 paid - $20.00 reduced = $50.00 outstanding"
                  >
                    <div class="math-symbols">
                      <div>
                        &nbsp;&nbsp;&nbsp;
                      </div>
                      <div>
                        &nbsp;&nbsp;&nbsp;
                      </div>
                      <div class="fines-reduced">
                        –&nbsp;
                      </div>
                      <div>
                        &nbsp;&nbsp;&nbsp;
                      </div>
                    </div>
                    <div class="amounts">
                      <div>
                        $3,850.00
                      </div>
                      <div>
                        $20.00
                      </div>
                      <div class="fines-reduced">
                        $3,780.00
                      </div>
                      <div>
                        $50.00
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/LookupInfo NoViolations smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item no-padding">
              <div class="row">
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box keys lookup-info">
                    <div class="vehicle-info-group vehicle-identity">
                      <div>
                        Plate:
                      </div>
                      <div>
                        State:
                      </div>
                      <div>
                        Plate type:
                      </div>
                    </div>
                    <div class="vehicle-info-group vehicle-violations">
                      <div class="violation-count-types">
                        <div>
                          Violations:
                        </div>
                      </div>
                    </div>
                    <div class="vehicle-info-group vehicle-lookups">
                      <div>
                        Lookups:
                      </div>
                      <div>
                        Previous:
                      </div>
                    </div>
                  </div>
                  <div class="summary-box values lookup-info">
                    <div class="vehicle-info-group vehicle-identity">
                      <div>
                        ABC1234
                      </div>
                      <div class="region">
                        <div class="region-abbreviation">
                          NY
                        </div>
                        <div class="region-full-name">
                          New York
                        </div>
                      </div>
                      <div>
                        All
                      </div>
                    </div>
                    <div class="vehicle-info-group vehicle-violations">
                      <div class="summary-value">
                        0
                      </div>
                    </div>
                    <div class="vehicle-info-group vehicle-lookups">
                      <div>
                        2
                      </div>
                      <div>
                        07/12/2023
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/LookupInfo ViolationsAndAPreviousLookup smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item no-padding">
              <div class="row">
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box keys lookup-info">
                    <div class="vehicle-info-group vehicle-identity">
                      <div>
                        Plate:
                      </div>
                      <div>
                        State:
                      </div>
                      <div>
                        Plate type:
                      </div>
                    </div>
                    <div class="vehicle-info-group vehicle-violations">
                      <div class="violation-count-types">
                        <div>
                          Violations:
                        </div>
                        <div class="violation-count-type">
                          Parking:
                        </div>
                      </div>
                    </div>
                    <div class="vehicle-info-group vehicle-lookups">
                      <div>
                        Lookups:
                      </div>
                      <div>
                        Previous:
                      </div>
                    </div>
                  </div>
                  <div class="summary-box values lookup-info">
                    <div class="vehicle-info-group vehicle-identity">
                      <div>
                        ABC1234
                      </div>
                      <div class="region">
                        <div class="region-abbreviation">
                          NY
                        </div>
                        <div class="region-full-name">
                          New York
                        </div>
                      </div>
                      <div>
                        All
                      </div>
                    </div>
                    <div class="vehicle-info-group vehicle-violations">
                      <div class="violation-counts">
                        <div class="violation-total">
                          3
                        </div>
                        <div class="violation-count">
                          3
                        </div>
                      </div>
                    </div>
                    <div class="vehicle-info-group vehicle-lookups">
                      <div>
                        2
                      </div>
                      <div>
                        07/12/2023
                      </div>
                    </div>
                  </div>
                </div>
                <div class="summary-section col-xs-12 col-sm-6">
                  <div class="summary-box keys">
                    <div>
                      Fined:
                    </div>
                    <div>
                      Reduced:
                    </div>
                    <div class="fines-reduced">
                      Paid:
                    </div>
                    <div>
                      Owed:
                    </div>
                  </div>
                  <div class="summary-box values fines"
                       role="math"
                       aria-label="$3,850.00 fined - $3,780.00 paid - $20.00 reduced = $50.00 outstanding"
                  >
                    <div class="math-symbols">
                      <div>
                        &nbsp;&nbsp;&nbsp;
                      </div>
                      <div>
                        &nbsp;&nbsp;&nbsp;
                      </div>
                      <div class="fines-reduced">
                        –&nbsp;
                      </div>
                      <div>
                        &nbsp;&nbsp;&nbsp;
                      </div>
                    </div>
                    <div class="amounts">
                      <div>
                        $3,850.00
                      </div>
                      <div>
                        $20.00
                      </div>
                      <div class="fines-reduced">
                        $3,780.00
                      </div>
                      <div>
                        $50.00
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
